tests/ui/const-generics/adt_const_params/const_param_ty_impl_union.stderr
error: this trait cannot be derived for unions
  --> $DIR/const_param_ty_impl_union.rs:19:10
   |
LL | #[derive(std::marker::ConstParamTy)]
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the type `Union` does not `#[derive(PartialEq)]`
  --> $DIR/const_param_ty_impl_union.rs:16:36
   |
LL | impl std::marker::ConstParamTy for Union {}
   |                                    ^^^^^ the trait `StructuralPartialEq` is not implemented for `Union`
   |
note: required by a bound in `ConstParamTy`
  --> $SRC_DIR/core/src/marker.rs:LL:COL

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
